--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             padding: 20px; /* Espaçamento interno */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Sombra */
         }
+
+            @media (max-width: 768px) {
+            #contador {
+                font-size: 54px; /* Tamanho da fonte ajustado para dispositivos móveis */
+            }
         </style>
 </head>
 <body>
