--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             const diferenca = dataFinal - agora;
 
             if (diferenca <= 0) {
-                document.getElementById("contador").textContent = "A teste  final chegou!";
+                 document.getElementById("contador").textContent = "A  final chegou!";
             } else {
                 const dias = Math.floor(diferenca / (1000 * 60 * 60 * 24));
                 const horas = Math.floor((diferenca % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
