--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Download de Arquivo na Raiz</h1>
     <p>Clique no link abaixo para baixar o arquivo:</p>
-    <a href="/Infos Salvador.docx" download>Download do Arquivo</a>
+    <a href="/Infos Salvador.epub" download>Download do Arquivo</a>
 </body>
 </html>
