--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <body>
        <div class="container">
         <div class="d-flex flex-wrap justify-content-center">
-                        <button class="btn btn-primary m-2" onclick="window.location.href='file7.pdf'">Download PDF 6</button>
+                        <button class="btn btn-primary m-2" onclick="window.location.href='file7.mobi'">Download PDF 7</button>
 
-            <button class="btn btn-primary m-2" onclick="window.location.href='file1.pdf'">Download PDF 1</button>
-            <button class="btn btn-primary m-2" onclick="window.location.href='file2.pdf'">Download PDF 2</button>
-            <button class="btn btn-primary m-2" onclick="window.location.href='file3.pdf'">Download PDF 3</button>
-            <button class="btn btn-primary m-2" onclick="window.location.href='file4.pdf'">Download PDF 4</button>
-            <button class="btn btn-primary m-2" onclick="window.location.href='file5.pdf'">Download PDF 5</button>
-            <button class="btn btn-primary m-2" onclick="window.location.href='file6.pdf'">Download PDF 6</button>
+            <button class="btn btn-primary m-2" onclick="window.location.href='file1.mobi'">Download PDF 1</button>
+            <button class="btn btn-primary m-2" onclick="window.location.href='file2.mobi'">Download PDF 2</button>
+            <button class="btn btn-primary m-2" onclick="window.location.href='file3.mobi'">Download PDF 3</button>
+            <button class="btn btn-primary m-2" onclick="window.location.href='file4.mobi'">Download PDF 4</button>
+            <button class="btn btn-primary m-2" onclick="window.location.href='file5.mobi'">Download PDF 5</button>
+            <button class="btn btn-primary m-2" onclick="window.location.href='file6.mobi'">Download PDF 6</button>
         </div>
 
        <script>
